Split screen added and welcome screen modified

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.sastaGoldari.thankyou"></activity>
-        <activity android:name="com.example.android.sastaGoldari.address" />
-        <activity android:name="com.example.android.sastaGoldari.reviewitems" />
-        <activity android:name="com.example.android.sastaGoldari.adminpanel" />
-        <activity android:name="com.example.android.sastaGoldari.logadmin" />
-        <activity android:name="com.example.android.sastaGoldari.MainActivity" />
-        <activity android:name="com.example.android.sastaGoldari.Welcome">
+        <activity android:name=".Welcome"/>
+        <activity android:name=".thankyou" />
+        <activity android:name=".address" />
+        <activity android:name=".reviewitems" />
+        <activity android:name=".adminpanel" />
+        <activity android:name=".logadmin" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
