--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Welcome"/>
+        <activity android:name=".vieworder"></activity>
+        <activity android:name=".deleteitem" />
+        <activity android:name=".edititem" />
+        <activity android:name=".additem" />
+        <activity android:name=".Welcome" />
         <activity android:name=".thankyou" />
         <activity android:name=".address" />
         <activity android:name=".reviewitems" />
