--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vieworder"></activity>
-        <activity android:name=".deleteitem" />
-        <activity android:name=".edititem" />
-        <activity android:name=".additem" />
-        <activity android:name=".Welcome" />
-        <activity android:name=".thankyou" />
-        <activity android:name=".address" />
-        <activity android:name=".reviewitems" />
-        <activity android:name=".adminpanel" />
-        <activity android:name=".logadmin" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".splashscreen">
+        <activity android:name=".activities.SelectEditActivity"></activity>
+        <activity android:name=".activities.vieworder" />
+        <activity android:name=".activities.deleteitem" />
+        <activity android:name=".activities.edititem" />
+        <activity android:name=".activities.additem" />
+        <activity android:name=".activities.Welcome" />
+        <activity android:name=".activities.thankyou" />
+        <activity android:name=".activities.address" />
+        <activity android:name=".activities.reviewitems" />
+        <activity android:name=".activities.adminpanel" />
+        <activity android:name=".activities.logadmin" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
