--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.sastaGoldari"
+        applicationId "com.adex11.android.sastaGoldari"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
